// go:generate protoc --proto_path=. --go_out=plugins=grpc:. *.proto
syntax = "proto3";

package proto;

service Interceptor {
  rpc OnRequest(OnRequestInput) returns (OnRequestOutput) {}
}

message OnRequestInput { HTTPRequest req = 1; }
message OnRequestOutput {
  enum Action {
    // continue processing request without any modification
    NONE = 0;
    // continue processing request, update it based on .req field
    UPDATE = 1;
    // reject processing, return response specified in .res
    REJECT = 2;
  }
  Action action = 1;
  HTTPRequest req = 2;
  HTTPResponse res = 3;
}

message HTTPRequest {
  string method = 1;
  string URL = 2;
  map<string, string> header = 4;
  bytes body = 5;
}

message HTTPResponse {
  uint32 status = 1;
  string proto = 2;
  map<string, string> header = 3;
  int64 length = 4;
  bytes body = 5;
}